Final commit of the day, solved small issues with center positionning

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body class="container column">
     <!--HEADER AND NAVIGATION BAR-->
     <nav class="container row whitetext spacebetween">
-        <p class="large">Navigation</p>
+        <p class="large container centering">Navigation</p>
         <!--HAMBURGER BUTTON-->
-        <p id="hamburger" class="large">☰</p>
+        <p id="hamburger" class="large container centering">☰</p>
     </nav>
 
     <!--Second Section-->
@@ -23,9 +23,9 @@
         </div><br>
 
         <div class="container row spacebetween">
-            <a href="">BlazRobar.com</a>
+            <a href="" class="medium">BlazRobar.com</a>
             <!--RIGHT ARROW IMAGE-->
-            <p class="large"> > </p>
+            <p class="medium"> > </p>
         </div>
     </section>
 
@@ -33,11 +33,11 @@
     <section id="robin" class="container row purpletext spacebetween">
         <p id="robintext" class="medium">I'm like the Robin Hood of PSD files.</p>
         <!--RIGHT ARROW PINK-->
-        <p class="pink whitetext" class="largest"> > </p>
+        <p class="container centering pink whitetext medium"> > </p>
     </section>
 
     <!--Fourth Section - BIG ARROW PURPLE-->
-    <section id="purple" class="whitetext textcenter">
+    <section id="purple" class="container centering whitetext textcenter">
         <p class="largest"> > </p>
     </section>
 
@@ -50,7 +50,7 @@
     <!--Seventh Section - ARTICLE-->
     <article id="text">
         <a href="" class="large">BlazRobar.com</a>
-        <br><br>
+        <br><br><br><br>
         <p class="medium">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
